NER Project is done

--- a/myner/popup.html
+++ b/myner/popup.html
@@ -6,6 +6,6 @@
         <script src="popup.js"></script>
     </head>
     <body>
-        <input id="extractTextButton" type="submit" value="Extract Text"/>
+        <input id="highlightTextButton" type="submit" value="Highlight Named Entities"/>
     </body>
 </html>
